[fix] Svg visibility fix

--- a/src/css/projects.sass
+++ b/src/css/projects.sass
@@ -208,7 +208,10 @@ section
   overflow: hidden
   top: 0
   left: 0
+  svg 
+    display: none
   .gradients-container 
+    filter: url(#goo) blur(40px)
     width: 100%
     height: 100%
   .g1 
