--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -328,7 +328,10 @@ body[data-theme='dark']
   overflow: hidden
   top: 0
   left: 0
+  svg 
+    display: none
   .gradients-container 
+    filter: url(#goo) blur(40px)
     width: 100%
     height: 100%
   .g1 
